src/snapshots/csvs_convert__describe__tests__write_datapackage-2.snap
---
source: src/describe.rs
expression: rows
---
- - table
  - field
  - type
  - format
  - min_len
  - max_len
  - min_str
  - max_str
  - count
  - empty_count
  - exact_unique
  - estimate_unique
  - sum
  - mean
  - variance
  - stddev
  - min_number
  - max_number
  - median
  - lower_quartile
  - upper_quartile
  - deciles
- - all_types
  - string
  - string
  - string
  - "3"
  - "3"
  - "122"
  - foo
  - "2"
  - "0"
  - "2"
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
- - all_types
  - array
  - array
  - array
  - "5"
  - "5"
  - "[4,5]"
  - "[4,9]"
  - "2"
  - "0"
  - "2"
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
- - all_types
  - object
  - object
  - object
  - "9"
  - "9"
  - "{\"a\":\"b\"}"
  - "{\"c\":\"b\"}"
  - "2"
  - "0"
  - "2"
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
- - all_types
  - date
  - date
  - "%Y-%m-%d"
  - "10"
  - "10"
  - 2005-01-12
  - 2005-01-12
  - "2"
  - "0"
  - "1"
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
- - all_types
  - datetime
  - datetime
  - "%Y-%m-%d %H:%M"
  - "16"
  - "16"
  - "2005-01-12 20:20"
  - "2005-01-12 20:20"
  - "2"
  - "0"
  - "1"
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
- - all_types
  - time
  - time
  - "%H:%M"
  - "5"
  - "5"
  - "12:12"
  - "12:12"
  - "2"
  - "0"
  - "1"
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
- - all_types
  - boolean
  - boolean
  - boolean
  - "4"
  - "4"
  - "true"
  - "true"
  - "2"
  - "0"
  - "1"
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
  - ""
- - all_types
  - number
  - number
  - number
  - "4"
  - "4"
  - "23.3"
  - "23.3"
  - "2"
  - "0"
  - "1"
  - ""
  - "46.6"
  - "23.3"
  - "0"
  - "0"
  - "23.3"
  - "23.3"
  - "23.3"
  - "23.3"
  - "23.3"
  - "[23.3,23.3,23.3,23.3,23.3,23.3,23.3,23.3,23.3]"
- - all_types
  - integer
  - integer
  - integer
  - "2"
  - "2"
  - "23"
  - "23"
  - "2"
  - "0"
  - "1"
  - ""
  - "46"
  - "23"
  - "0"
  - "0"
  - "23"
  - "23"
  - "23"
  - "23"
  - "23"
  - "[23.0,23.0,23.0,23.0,23.0,23.0,23.0,23.0,23.0]"

