src/snapshots/csvs_convert__describe__tests__write_datapackage_multi.snap
---
source: src/describe.rs
expression: value
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: all_types
    row_count: 2
    schema:
      fields:
        - name: string
          type: string
          format: string
          stats:
            min_len: 3
            max_len: 3
            min_str: "122"
            max_str: foo
            min_number: 122
            max_number: 122
            count: 2
            empty_count: 0
            estimate_unique: 2
            sum: ~
            mean: ~
        - name: array
          type: array
          format: array
          stats:
            min_len: 5
            max_len: 5
            min_str: "[4,5]"
            max_str: "[4,9]"
            min_number: ~
            max_number: ~
            count: 2
            empty_count: 0
            estimate_unique: 2
            sum: ~
            mean: ~
        - name: object
          type: object
          format: object
          stats:
            min_len: 9
            max_len: 9
            min_str: "{\"a\":\"b\"}"
            max_str: "{\"c\":\"b\"}"
            min_number: ~
            max_number: ~
            count: 2
            empty_count: 0
            estimate_unique: 2
            sum: ~
            mean: ~
        - name: date
          type: date
          format: "%Y-%m-%d"
          stats:
            min_len: 10
            max_len: 10
            min_str: 2005-01-12
            max_str: 2005-01-12
            min_number: ~
            max_number: ~
            count: 2
            empty_count: 0
            estimate_unique: 1
            sum: ~
            mean: ~
        - name: datetime
          type: datetime
          format: "%Y-%m-%d %H:%M"
          stats:
            min_len: 16
            max_len: 16
            min_str: "2005-01-12 20:20"
            max_str: "2005-01-12 20:20"
            min_number: ~
            max_number: ~
            count: 2
            empty_count: 0
            estimate_unique: 1
            sum: ~
            mean: ~
        - name: time
          type: time
          format: "%H:%M"
          stats:
            min_len: 5
            max_len: 5
            min_str: "12:12"
            max_str: "12:12"
            min_number: ~
            max_number: ~
            count: 2
            empty_count: 0
            estimate_unique: 1
            sum: ~
            mean: ~
        - name: boolean
          type: boolean
          format: boolean
          stats:
            min_len: 4
            max_len: 4
            min_str: "true"
            max_str: "true"
            min_number: ~
            max_number: ~
            count: 2
            empty_count: 0
            estimate_unique: 1
            sum: ~
            mean: ~
        - name: number
          type: number
          format: number
          stats:
            min_len: 4
            max_len: 4
            min_str: "23.3"
            max_str: "23.3"
            min_number: 23.3
            max_number: 23.3
            count: 2
            empty_count: 0
            estimate_unique: 1
            sum: 46.6
            mean: 23.3
        - name: integer
          type: integer
          format: integer
          stats:
            min_len: 13
            max_len: 13
            min_str: "1010041430000"
            max_str: "1010041430000"
            min_number: 1010041430000
            max_number: 1010041430000
            count: 2
            empty_count: 0
            estimate_unique: 1
            sum: 2020082860000
            mean: 1010041430000
    path: all_types.csv
    dialect:
      delimiter: ","
      quoteChar: "\""

